--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="HLimg1.png" alt="Healthy Lifestyle Image">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live  your healthiest life now!</h2>
@@ -39,21 +39,21 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="AIimg1.png" alt="Artificial Intelligence Image">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="FTimg2.png" alt="Fitness Tracker Image">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="HLimg2.png" alt="Healthy Lifestyle Second Image">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
@@ -64,7 +64,7 @@
         </section>
         <section class="testing">
             <div class="container">
-                <div class="testing-desciption">
+                <div class="testing-description">
                     <h2>COVID-19 Testing Programme</h2>
                     <p>Providing secure and connected COVID-19 screening and testing services to communities in collaboration with public health agencies and industry partners.</p>
                 </div>
@@ -110,7 +110,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2020, Shevar Roulston</p>
         </div>
     </footer>
 </body>
